--- a/css/styles.css
+++ b/css/styles.css
@@ -1,223 +1,652 @@
-/*
- *
- * CSS written based on SMACSS architecture.
- * To learn more, visit: http://smacss.com/
- * 
- * For simplicity, no reset or normalize is added. 
- * To learn more, visit: https://css-tricks.com/reboot-resets-reasoning/
- *
-*/
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300;500&family=Roboto+Mono:ital,wght@0,200;1,100;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Mukta:wght@300;500&family=Roboto+Mono:ital,wght@0,200;1,100;1,200&display=swap');
 
-
-/* ---- Base Rules ---- */
-body {
-    background: rgb(136,203,171);
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+*{
+    font-family: "Mukta", "Source Sans Pro", serif;
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
-    font-family: 'Merriweather', serif;
-    color: #fff;
 }
 
-
-/* Typeography General*/
-h1 {
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 3em;
-    margin: 2em 1rem;
+h1,h2,h3,h4,h5,h6{
+    font-family: "DM Sans", "Mukta", sans-serif;
 }
 
-@media only screen and (min-width: 35em){
-    h1 {
-        font-size: 7em;
-        margin: 2em 4rem 1em;
-    }
+header{
+    background-color: rgb(99,230,190);
+    color: #ffffff;
 }
 
-h2 {
-    border-bottom: 1px solid #cc1;
-    font-family: 'Oxygen', Sans-Serif;
-    font-size: 3em;
-    color: #fff;
+header.transparent{
+    background-color: rgb(99,230,190,.2);
 }
 
-p {
-    line-height: 1.6em;
-    color: #eee;
-}
-
-/* ---- Layout Rules ---- */
-main {
-    margin: 10vh 1em 10vh;
-}
-
-.main-hero {
-    min-height: 40vh;
-    padding-top: 3em;
-}
-
-section {
-    position: relative;
-    min-height: 80vh;
-}
-
-
-/* ---- Module Rules ---- */
-
-/* Navigation Styles*/
-.navbar__menu ul {
-    padding-left: 0;
-    margin: 0;
-    text-align: right;
-}
-
-.navbar__menu li {
-    display: inline-block;
-}
-
-.navbar__menu .menu__link {
-    display: block;
-    padding: 1em;
-    font-weight: bold;
-    text-decoration: none;
-    color: #000;
-}
-
-.navbar__menu .menu__link:hover {
-    background: #333;
-    color: #fff;
-    transition: ease 0.3s all;
-}
-
-/* Header Styles */
-.page__header {
-    background: #fff;
+.sticky{
     position: fixed;
-    top: 0;
     width: 100%;
-    z-index: 5;
+    top: 0;
+    border-radius: 1rem 1rem 0 0;
+    background-color: rgb(99,230,190,.2);
 }
 
-/* Footer Styles */
-.page__footer {
-    background: #000;
-    padding: 3em;
-    color: #fff;
+.active-link{
+    color: #ffffff;
+    text-decoration: underline;
 }
 
-.page__footer p{
-    color: #fff;
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+}
+
+.navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+}
+
+.logo{
+    font-size: 2rem;
+}
+
+#navbar-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+}
+
+.menu-list{
+    transition: 0.5s ease;
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.mobile-menu{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #183153;
+}
+
+.main{
+   margin-top: 2rem;
+}
+
+.mainHeading{
+    color: #183153;
+    padding: 1rem 2rem;
+}
+
+.first-section{
+    display: grid;
+    grid-template-columns: 1hr 1hr;
+    grid-template-areas: "first-section-img-container first-section-content";
+    padding: 0 2rem;
+}
+
+.first-section-img-container{
+    grid-area: "first-section-img-container";
+}
+
+.first-section-img{
+    border-bottom-left-radius: 2rem;
+    max-width: 100%;
+    max-height: auto;
+}
+
+.first-section-content{
+    grid-area: "first-section-content";
+    background-color: rgb(99,230,190);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 0 0rem 2rem 0;
+}
+
+.first-section-small-heading{
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+    color: #183153;
+}
+
+.first-section-content-up{
+    font-size: 3rem;
+    padding: 2rem 0;
+    line-height: 3rem;
+    letter-spacing: 0.2rem;
+}
+
+.first-section-content-down{
+    color: #112A52;
+    line-height: 1.8rem;
+}
+
+.first-section-info{
+    display: flex;
+    padding: 4rem 2rem;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.first-content{
+    display: flex;
+    gap: 1rem;
+}
+
+.svg-icon{
+    width: 4rem;
+    height: 4rem;
+    fill: #183153;
+    background-color: rgb(99,230,190);
+    border-radius: 50%;
+    padding: 1rem;
+}
+
+.first-text-content{
+    font-size: small;
+    padding-top: 0.5rem;
+    color: #112A52;
+}
+
+.card-section, .first-section{
+    padding: 0 2rem;
+}
+
+.card-heading{
+    text-align: center;
+    color: #112A52;
+    padding: 1rem 0;
+}
+
+.card-heading-text{
+    text-align: center;
+}
+
+.card{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    padding: 2rem 0;
+}
+
+.card-photo> img{
+    width: 100%;
+    height: auto;
+    border-radius: 1rem;
+}
+
+.concept{
+    background-color: rgb(99,230,190);
+}
+
+.concept-heading{
+    color: #183153;
+    text-align: center;
+    padding: 5rem 0 2rem 0;
+}
+
+.concept-list{
+    display: grid;
+    grid-template-areas: "1fr 1fr";
+    gap: 5rem;
+    border-bottom: 0.2rem solid  rgb(178, 233, 216);
+    padding: 3rem 2rem;
+
+}
+
+.concept-details{
+    display: grid;
+    grid-template-areas: "1fr 1fr";
+    gap: 5rem;
+}
+
+.concept-list:last-child{
+    border-bottom: none;
+}
+
+.list-number{
+    color: #183153;
+    font-size: 1.5rem;
+}
+
+.concept-bold{
+    font-size: 1.5rem;
+}
+
+.happy-time{
+    padding: 2rem;
+}
+
+.happy-time-img{
+    width: 100%;
+    height: auto;
+}
+
+.happy-time-div{
+    display: grid;
+    grid-template-areas: "1fr 1fr";
+    gap: 2rem;
+    margin: 2rem 0;
+}
+
+.happy-time-content{
+   border: 0.2rem solid rgb(99,230,190);
+   border-radius: 1rem;
+   text-align: center;
+   padding: 2rem;
+   
+}
+
+.happy-time-content-text{
+    font-size: 1.5rem;
+    color: #183153;
+    padding: 2rem 0;
+}
+
+.happy-time-context{
+    color: #112A52;
+    padding: 1rem 0 2rem 0;
+}
+
+.svg-heart{
+    width: 5rem;
+    height: 5rem;
+    padding: 1rem;
+    fill: rgb(99,230,190);
+}
+
+.happy-time-content-bottom{
+    background-color: rgb(178, 233, 216);
+    padding: 2rem 3rem;
+}
+ 
+.happy-time-name{
+    color: #112A52;
+    font-weight: bold;
+}
+
+.happy-time-state{
+    font-size: small;
+    color: #112A52;
+}
+
+.subscribe-section{
+    background-color: rgb(178, 233, 216);
+}
+
+.subscribe{
+    text-align: center;
+    padding: 2rem;
+    margin-bottom: 2rem;
+}
+
+.subscribe-heading{
+    color: rgb(24, 166, 126);
+    font-size: 2rem;
+    padding: 2rem 0 1rem 0
+}
+
+.form{
+    background-color: #ffffff;
+    display: grid;
+    grid-template-areas: "form-left form-right";
+    gap: 5rem;
+    margin: 0 10rem;
+    padding: 5rem;
+}
+
+.form-left{
+    grid-area: "form-left";
+}
+
+.form-right{
+    grid-area: "form-right";
+}
+
+.form-div{
+    padding-bottom: 2rem;
+}
+
+input{
+    display: inline-block;
+    border: none;
+    outline: none;
+    width: 100%;
+    border-bottom: 0.1rem solid #cccccc;
+}
+
+textarea{
+    outline: none;
+    border: none;
+    border-bottom: 0.1rem solid #cccccc;
+    width: 100%;
+    background-image: -webkit-linear-gradient(left, white 10px, transparent 10px), -webkit-linear-gradient(right, white 10px, transparent 10px), -webkit-linear-gradient(white 30px, #ccc 30px, #ccc 31px, white 31px);
+    background-size: 100% 100%, 100% 100%, 100% 31px;
+    border: 1px solid #cccccc;
+    border-radius: 0.8rem;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    line-height: 31px;
+    margin: 1rem 0 0 0;
+}
+
+.submit{
+    text-align: center;
+    padding: 0.5rem;
+    color: #183153;
+    border: 0.1rem solid;
+    border-radius: 1rem;
+    width: 100%;
+    cursor: pointer;
+}
+
+.submit:hover{
+    color: rgb(99,230,190);
+}
+
+.footer-info{
+    display: grid;
+    grid-template-areas: "1fr 1fr 1fr";
+    padding: 5rem;
+    gap: 2rem;
+    line-height: 1.8rem;
+    background-color: rgb(24, 166, 126);
+    color: #ffffff;
+}
+
+.footer-list> ul {
+    margin: 0;
+    list-style: none ;
+}
+
+.footer-list> ul> p{
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    text-decoration: underline;
+}
+
+.footer-list> ul> p:hover{
+    color: #183153;
+}
+
+.footer-list> ul> li{
+    padding: 0.5rem;
+}
+
+#footer_copyright {
+    background-color: #183153;
+    text-align: center;
+    padding: 2rem;
+    color: #ffffff;   
+}
+
+#footer_copyright:hover{
+    color: rgb(24, 166, 126);
 }
 
 
-/* ---- Theme Rules ---- */
-/* Landing Container Styles */
-.landing__container {
-    padding: 1em;
-    text-align: left;
-}
 
-@media only screen and (min-width: 35em){
-    .landing__container {
-        max-width: 50em;
-        padding: 4em;
+@media(min-width: 481px) and (max-width: 768px){
+    .first-section{
+        grid-template-areas: "first-section-img first-section-content";
+        width: 100%;
+    }
+
+    .first-section-content{
+        grid-area: "first-section-content";
+        background-color: rgb(99,230,190);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2rem;
+        border-radius: 0 0 1rem 0rem;
+    }
+
+    .first-section-small-heading{
+        font-size: 0.8rem;
+        letter-spacing: normal;
+    }
+
+    .first-section-content-up{
+        font-size: 2rem;
+        padding: 1rem 0;
+        line-height: 2.5rem;
+        letter-spacing: normal;
+    }
+
+    .first-section-content-down{
+        line-height: normal;
+    }
+
+    .first-content{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0;
+    }
+
+    .concept-heading{
+        padding: 1rem 0 0 0;
+    }
+
+    .concept-details{
+        grid-template-areas: "1fr" 
+                            "1fr";
+        gap: 1rem;
+    }
+
+    .happy-time-content{
+        padding: 0 2rem;
+     }
+     .happy-time-content-text{
+        padding: 1rem 0;
+    }
+    .happy-time-context{
+        color: #112A52;
+        padding: 0 0 0.5rem 0;
+    }
+    .svg-heart{
+        padding: 0.5rem;
+    }
+
+    .happy-time-content-bottom{
+        padding: 2rem 2rem;
+    }
+
+    .subscribe{
+        padding: 0 2rem;
+        margin-bottom: 0;
+    }
+    .subscribe-heading{
+        font-size: 1.5rem;
+        padding: 2rem 0 1rem 0
+    }
+    .form{
+        margin: 2rem 5rem;
+        padding: 2rem;
+    }
+
+    .footer-info{
+        padding: 2rem;
+        gap: 1rem;
+        line-height: 1rem;
     }
 }
 
-section:nth-of-type(even) .landing__container {
-    margin-right: 0;
-    margin-left: auto;
-    text-align: right; 
-}
-
-/* Background Circles */
-/* Note that background circles are created with psuedo elements before and after */
-/* Circles appear to be random do to use of :nth-of-type psuedo class */
-section:nth-of-type(odd) .landing__container::before {
-    content: '';
-    background: rgba(255, 255, 255, 0.187);
-    position: absolute;
-    z-index: -5;
-    width: 20vh;
-    height: 20vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(even) .landing__container::before {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    top: 3em;
-    right: 3em;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n) .landing__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n + 1) .landing__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 20vw;
-    bottom: -5em;
-    z-index: -5;
-    width: 15vh;
-    height: 15vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
 
 
-/* ---- Theme State Rules ---- */
-/* Section Active Styles */
-/* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-}
+@media(max-width: 480px){
+    .hamburger{
+        display: block;
+    }
 
-section.your-active-class .landing__container::before {
-    opacity: 1;
-    animation: rotate 4s linear 0s infinite forwards;
-}
+    .hamburger.active .mobile-menu:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .mobile-menu:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .mobile-menu:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
 
-section.your-active-class .landing__container::after {
-    opacity: 1;
-    animation: rotate 5s linear 0s infinite forwards reverse;
-}
+    #navbar-list{
+        position: fixed;
+        left: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: rgb(99,230,190);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
 
-/* Section Active Styles Keyframe Animations */
-@keyframes rotate {
-	from {
-		transform: rotate(0deg)
-		           translate(-1em)
-		           rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg)
-		           translate(-1em) 
-		           rotate(-360deg);
-	}
+    .nav-item{
+        margin: 16px 0;
+    }
+
+    #navbar-list.active{
+        left: 0;
+    }
+    
+
+    .first-section{
+        grid-template-areas: "first-section-img" 
+                            "first-section-content";
+    }
+
+    .first-section-img{
+        grid-area: "first-section-img";
+        border-radius: 0;
+        padding: 0;
+    }
+
+    .first-section-content{
+        grid-area: "first-section-content";
+        background-color: rgb(99,230,190);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2rem;
+        border-radius: 0 0 1rem 1rem;
+    }
+
+    .first-section-small-heading{
+        font-size: 0.8rem;
+        letter-spacing: normal;
+    }
+
+    .first-section-content-up{
+        font-size: 2rem;
+        padding: 1rem 0;
+        line-height: 2.5rem;
+        letter-spacing: normal;
+    }
+
+    .first-section-content-down{
+        line-height: normal;
+    }
+
+    .first-section-info{
+        flex-direction: column;
+        padding: 2rem 2rem;
+        gap: 2rem;
+    }
+
+    .first-content{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .first-text-content{
+        padding-top: 0.5rem;
+    }
+
+    .card{
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .concept-heading{
+        padding: 2rem 0 0 0;
+    }
+
+    .concept-list{
+        grid-template-areas: "1fr"
+                            "1fr";
+        gap: 1rem;
+    }
+
+    .concept-details{
+        grid-template-areas: "1fr" 
+                            "1fr";
+        gap: 1rem;
+    }
+
+    .happy-time-div{
+        grid-template-areas: "1fr"
+                             "1fr";
+        gap: 1rem;
+    }
+
+    .happy-time-content{
+        padding: 1rem;
+     }
+
+     .happy-time-content-text{
+        padding: 1rem 0;
+    }
+
+    .happy-time-context{
+        color: #112A52;
+        padding: 0 0 0.5rem 0;
+    }
+
+    .svg-heart{
+        padding: 0.5rem;
+    }
+
+    .happy-time-content-bottom{
+        padding: 0.5rem 1rem;
+    }
+    
+    .subscribe{
+        padding: 0 2rem;
+        margin-bottom: 0;
+    }
+
+    .subscribe-heading{
+        font-size: 1.5rem;
+        padding: 2rem 0 1rem 0
+    }
+
+    .form{
+        grid-template-areas: "form-left"
+                            "form-right";
+        margin: 2rem 5rem;
+        padding: 2rem;
+    }
+
+    .footer-info{
+        grid-template-areas: "1fr";
+        padding: 2rem;
+        gap: 2rem;
+        line-height: 1rem;
+    }
+
 }
